# sfml_4d_cube_renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: linalg.cpp  main.cpp
src/include/: linalg.h
